# OpenSpeechPlatform-2020B

./: .gitignore  LICENSE  MixSetting.tac8  README.md
SOurces/libosp/: .clang-format  CHANGELOG.md  CMakeLists.txt  Makefile
SOurces/libosp/OSP/: example_template.cpp
SOurces/libosp/OSP/GarbageCollector/: GarbageCollector.hpp
SOurces/libosp/OSP/adaptive_filter/: adaptive_filter.cpp
SOurces/libosp/OSP/afc/: afc.cpp  afc.hpp  bandlimited_filter.h
SOurces/libosp/OSP/array_file/: array_file.hpp
SOurces/libosp/OSP/circular_buffer/: circular_buffer.hpp
SOurces/libosp/OSP/fileio/: AudioFile.h
SOurces/libosp/OSP/filter/: filter.hpp
SOurces/libosp/OSP/freping/: freping.hpp  hamming_window64.h
SOurces/libosp/OSP/multirate_filterbank/: tenband_filterbank.cpp
SOurces/libosp/OSP/resample/: polyphase_hb_downsampler.cpp  resample.cpp
SOurces/libosp/docs/: Doxyfile.in  Makefile  all.md
SOurces/libosp/fake/: osp_fake_client.py
SOurces/libosp/release/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
SOurces/libosp/release/OSP/: OSP.hpp
SOurces/libosp/release/src/: OspVersion.hpp  osp
SOurces/libosp/src/: OspVersion.hpp.in  portaudio_wrapper.cpp
SOurces/libosp/src/include/: config.hpp  config10.hpp  osp_net.hpp  osp_parser.hpp  sema.hpp
SOurces/libosp/test/: adaptive_filter_test.cpp  band_torture  beamformer_test.cpp  filter_test.cpp
Software/OSP/: .gitmodules  CMakeLists.txt
Software/OSP/include/: control_param.h  cxxopts.hpp  ews_connect.hpp  filter_coef.h  openspeechplatform.hpp.in  osp_param.h  osp_parser.hpp  osp_process.hpp  portaudio_wrapper.h
Software/OSP/src/: main.cpp  pa_devs.cpp  portaudio_wrapper.cpp
Software/libosp/: CMakeLists.txt
Software/libosp/OSP/: OSP.hpp.in  OSP.pc.in
Software/libosp/OSP/ReleasePool/: ReleasePool.hpp
Software/libosp/OSP/adaptive_filter/: adaptive_filter.cpp  adaptive_filter.hpp
Software/libosp/OSP/afc/: afc.cpp  afc.hpp  afc_init_filter.h  bandlimited_filter.h  prefilter.h
Software/libosp/OSP/array_file/: array_file.cpp  array_file.hpp
Software/libosp/OSP/array_utilities/: array_utilities.cpp  array_utilities.hpp
Software/libosp/OSP/beamformer/: beamformer.cpp  beamformer.hpp
Software/libosp/OSP/circular_buffer/: circular_buffer.cpp  circular_buffer.hpp
Software/libosp/OSP/fileio/: file_record.cpp  file_record.h  playfile.h  sema.hpp
Software/libosp/OSP/filter/: filter.cpp  filter.hpp
Software/libosp/OSP/resample/: 48_32_filter.h  resample.cpp  resample.hpp
Software/libosp/OSP/subband/: noise_management.cpp  noise_management.hpp  peak_detect.cpp  peak_detect.hpp  wdrc.cpp  wdrc.hpp
Software/libosp/test/: ews_connect_test.php  filter_test.cpp
Software/librtmha/: .gitignore  CMakeLists.txt
Software/librtmha/OSP/adaptive_filter/: adaptive_filter.hpp
Software/librtmha/OSP/afc/: afc.cpp  afc_init_filter.h  prefilter.h
Software/librtmha/OSP/array_file/: array_file.cpp
Software/librtmha/OSP/array_utilities/: array_utilities.cpp
Software/librtmha/OSP/beamformer/: beamformer.cpp  beamformer.hpp
Software/librtmha/OSP/circular_buffer/: circular_buffer.cpp
Software/librtmha/OSP/fileio/: AudioFile.cpp  file_record.cpp  playfile.cpp  playfile.h
Software/librtmha/OSP/filter/: filter.cpp  fir_formii.cpp  fir_formii.h
Software/librtmha/OSP/freping/: freping.hpp
Software/librtmha/OSP/multirate_filterbank/: tenband_filterbank.cpp  tenband_filterbank.h
Software/librtmha/OSP/resample/: 32_48_filter.h  polyphase_hb_downsampler.cpp  polyphase_hb_upsampler.cpp  resample.cpp
Software/librtmha/OSP/subband/: noise_management.hpp  peak_detect.cpp  peak_detect.hpp  wdrc.cpp
Software/librtmha/docs/: Doxyfile.in
Software/librtmha/docs/html/: 32__48__filter_8h_source.html  48__32__filter_8h_source.html  AudioFile_8cpp.html  AudioFile_8cpp.js  AudioFile_8cpp__incl.md5  AudioFile_8cpp_source.html  AudioFile_8h.html  AudioFile_8h.js  AudioFile_8h__dep__incl.md5  AudioFile_8h__incl.md5  AudioFile_8h_source.html  GarbageCollector_8hpp_source.html  adaptive__filter_8cpp.html  adaptive__filter_8cpp__incl.md5  adaptive__filter_8cpp_source.html  adaptive__filter_8hpp.html  adaptive__filter_8hpp__dep__incl.md5  adaptive__filter_8hpp__incl.md5  afc_8cpp.html  (+245 more)
Software/librtmha/test/: adaptive_filter_test.cpp  afc_test.cpp  beamformer_test.cpp  filter_test.cpp
Sources/libimu/: CMakeLists.txt  README.md
Sources/libimu/misc/: libimu_brute.cpp
Sources/libosp/OSP/: CMakeLists.txt  OSP.hpp.in
Sources/libosp/src/: CMakeLists.txt  config.json  config10.json  main.cpp
Sources/libosp/test/: CMakeLists.txt  afc_test.cpp  freping_test.cpp  get_torture
osp-clion/: CMakeLists.txt  alsa_wrapper.c  alsa_wrapper.h  logger.c  logger.h  loopback.h  main.c  port_wrapper.c  port_wrapper.h  test.h  test_main.c
osp-clion/Boothroyd Filters/: filterbank_coeffs2.flt  filterbank_coeffs3.flt  filterbank_coeffs6.flt
osp-clion/Kates Filters/: filterbank_coeffs3.flt  filterbank_coeffs5.flt  filterbank_coeffs6.flt
osp-clion/filter_coefficients/: fbpath.flt  filterbank_coeffs1.flt  filterbank_coeffs2.flt  filterbank_coeffs3.flt  filterbank_coeffs4.flt  filterbank_coeffs5.flt  filterbank_coeffs6.flt  resample_32_48.flt  resample_32_96.flt  resample_96_32.flt
osp-clion/osp-libs/: .gitignore  Doxyfile  Makefile
osp-clion/osp-libs/afc/: Makefile  afc.c  circular_buffer.c  circular_buffer.h
osp-clion/osp-libs/array_utilities/: array_utilities.c  array_utilities.h
osp-clion/osp-libs/beam_forming/: Makefile  beam_forming.c  beam_forming.h  delay_line.h
osp-clion/osp-libs/common/: constants.h
osp-clion/osp-libs/filter/: Makefile  filter.c  filter.h
osp-clion/osp-libs/osp_process/: Makefile  coeffs.h  logger.h  osp_process.c  osp_process.h  utilities.c
osp-clion/osp-libs/osp_tcp/: Makefile  jsmn.h  osp_tcp.c  tcplib.c  tcplib.h
osp-clion/osp-libs/peak_detect/: peak_detect.c  peak_detect.h
osp-clion/osp-libs/resample/: Makefile  resample.c
osp-clion/osp-libs/speech_enhancement/: speech_enhancement.c
osp-clion/osp-libs/wdrc/: Makefile  mpo.h  wdrc.h  wdrc_mpo_support.c  wdrc_mpo_support.h
(+2023 files in other folders)
